# n2n6

./: CMakeLists.txt  bypass.h  edge.c  n2n.c  n2n.h  n2n_wire.h  sn.c  wire.c
.github/workflows/: cd.yml
src/: bypass.c  bypass.h  edge.c  n2n.c  n2n.h  n2n_wire.h  sn.c  upnp.c  wire.c  ws.c
win32/: CMakeLists.txt  edge.rc  n2n_win32.h  windivert.c  windivert.h  wintap.c
windows-client/plans/: 2026-05-27-windows-client-mvp.md
windows-client/specs/: 2026-05-27-windows-client-design.md
windows-client/src/: WindowsClient.sln
windows-client/src/WindowsClient.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WindowsClient.App.csproj
windows-client/src/WindowsClient.App/ViewModels/: MainWindowViewModel.cs  ProfileWizardViewModel.cs  RelayCommand.cs
windows-client/src/WindowsClient.App/Views/: ProfileWizardWindow.xaml  ProfileWizardWindow.xaml.cs
windows-client/src/WindowsClient.Core/Interfaces/: ICommandBuilder.cs  IConnectionController.cs  IProfileStore.cs  IVersionDiscoveryService.cs
windows-client/src/WindowsClient.Core/Models/: AppStateModel.cs  ClientConfigModel.cs  ConnectionRuntimeState.cs  EdgeCommandModel.cs  ProfileModel.cs  VersionInfoModel.cs
windows-client/src/WindowsClient.Core/Services/: CommandPreviewMasker.cs  ProfileValidationResult.cs  (+1 more)
windows-client/src/WindowsClient.Infrastructure/: WindowsClient.Infrastructure.csproj
windows-client/src/WindowsClient.Tests/: CommandBuilderTests.cs  ConnectionControllerTests.cs  ProfileStoreTests.cs  ProfileValidatorTests.cs  VersionDiscoveryTests.cs  WindowsClient.Tests.csproj
(+5 files in other folders)
